# barectf-parser

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: events.rs  events_async.rs
src/: config.rs  error.rs  lib.rs
src/parser/: mod.rs  types.rs
src/types/: event.rs  mod.rs  packet.rs
test_resources/fixtures/simple/: effective_config.yaml
test_resources/fixtures/simple/trace/: stream
test_resources/src/: generate-fixtures.sh
test_resources/src/common/: barectf_platform_linux_fs.c  barectf_platform_linux_fs.h
test_resources/src/full/: CMakeLists.txt
test_resources/src/full/config/: schema.yaml
test_resources/src/full/src/: main.c
test_resources/src/simple/: CMakeLists.txt
test_resources/src/simple/config/: schema.yaml
test_resources/src/simple/src/: main.c
tests/: full.rs  simple.rs
