[package]
name = "barectf-parser"
version = "0.2.0"
edition = "2021"
authors = ["Jon Lamb <jon@auxon.io>"]
description = "A Rust library to parse barectf-generated CTF trace data"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/barectf-parser"
documentation = "https://docs.rs/barectf-parser"
exclude = ["test_resources/"]

[dependencies]
tokio = { version = "1", features = ["io-util", "tracing"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features=["derive"] }
serde_yaml = "0.9.34"
bytes = "1"
uuid = { version = "1", default-features = false, features = ["std", "v4", "v5", "serde"] }
tracing = "0.1"
thiserror = "1.0"
fxhash = "0.2"
ordered-float = { version = "5.0", features = ["serde"] }
byteordered = "0.6"
itertools = "0.14"
internment = { version = "0.8", features = ["serde"] }
derive_more = { version = "2.0", features = ["full"] }
num_enum = "0.7"

# For the examples and tests
[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-util", "fs", "tracing"] }
tokio-stream = "0.1"
test-log = { version = "0.2", features = ["trace"] }
clap = { version = "4.5", features = ["derive"] }
pretty_assertions = "1.4"
